--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "torch (==2.8.0)",
     "transformers (==4.56.1)",
     "resemble-perth (==1.0.1)",
-    "llama-cpp-python (>=0.3.16,<0.4.0)"
+    "llama-cpp-python (>=0.3.16,<0.4.0)",
+    "nltk (>=3.9.2,<4.0.0)"
 ]
 
 
