--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "transformers (==4.56.1)",
     "resemble-perth (==1.0.1)",
     "llama-cpp-python (>=0.3.16,<0.4.0)",
-    "nltk (>=3.9.2,<4.0.0)"
+    "nltk (>=3.9.2,<4.0.0)",
+    "gradio (>=5.49.1,<6.0.0)"
 ]
 
 
